--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Yay News</title>
+    <title>ETC News</title>
+    <link rel="shortcut icon" type="image/jpg" href="https://i.imgur.com/RkEJhWS.png"/>
   </head>
   <body>
     <div id="root"></div>
