--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>ETC News</title>
-    <link rel="shortcut icon" type="image/jpg" href="https://i.imgur.com/RkEJhWS.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="https://i.imgur.com/LD0kKu5.png"/>
   </head>
   <body>
     <div id="root"></div>
